--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -75,25 +75,34 @@ jobs:
         run: |
           sudo rm -rf *
 
+      # Checkout the mathlib4 repository with all branches
       - name: Checkout mathlib4 repository
         uses: actions/checkout@v2
         with:
           repository: leanprover-community/mathlib4
           token: ${{ secrets.MATHLIB4_BOT }}
           ref: master
+          fetch-depth: 0
 
-      - name: Create new branch
+      - name: Check if branch exists
+        id: check_branch
         run: |
-          git checkout -b lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }}
+          EXISTS=$(git ls-remote --heads origin lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }} | wc -l)
+          echo "Branch exists: $EXISTS"
+          if [ "$EXISTS" = "0" ]; then
+            echo "Branch does not exist, creating it."
+            git checkout -b lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }}
+            echo "leanprover/lean4-pr-releases:pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}" > lean-toolchain
+            git add lean-toolchain
+            git commit -m "Update lean-toolchain for testing https://github.com/leanprover/lean4/pull/${{ steps.workflow-info.outputs.pullRequestNumber }}"
+          else
+            echo "Branch already exists, pushing an empty commit."
+            git checkout lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }}
+            git commit --allow-empty -m "Trigger CI for https://github.com/leanprover/lean4/pull/${{ steps.workflow-info.outputs.pullRequestNumber }}"
+          fi
 
-      - name: Update lean-toolchain
-        run: |
-          echo "leanprover/lean4-pr-releases:pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}" > lean-toolchain
-
-      - name: Commit and push changes
+      - name: Push changes
         run: |
           git config user.name "leanprover-community-mathlib4-bot"
           git config user.email "leanprover-community-mathlib4-bot@users.noreply.github.com"
-          git add lean-toolchain
-          git commit -m "Update lean-toolchain for testing https://github.com/leanprover/lean4/pull/${{ steps.workflow-info.outputs.pullRequestNumber }}"
           git push origin lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }}
