--- a/tests/bench/speedcenter.exec.velcom.yaml
+++ b/tests/bench/speedcenter.exec.velcom.yaml
@@ -124,26 +124,26 @@
       lake -dinundation run mk
       lake -dinundation build
       "
-- attributes:
-    description: lake build lean
-    tags: [slow]
-  run_config:
-    <<: *time
-    cmd: |
-      bash -c "
-      set -ex
-      ulimit -s unlimited
-      lake -Ktest=Clean clean
-      lake -Ktest=Clean build
-      "
-    max_runs: 2
-  build_config:
-    cmd: |
-      bash -c "
-      set -ex
-      ulimit -s unlimited
-      lake -Ktest=Clean build
-      "
+#- attributes:
+#    description: lake build lean
+#    tags: [slow]
+#  run_config:
+#    <<: *time
+#    cmd: |
+#      bash -c "
+#      set -ex
+#      ulimit -s unlimited
+#      lake -Ktest=Clean clean
+#      lake -Ktest=Clean build
+#      "
+#    max_runs: 2
+#  build_config:
+#    cmd: |
+#      bash -c "
+#      set -ex
+#      ulimit -s unlimited
+#      lake -Ktest=Clean build
+#      "
 - attributes:
     description: lake build no-op
     tags: [fast]
