--- a/tests/bench/speedcenter.exec.velcom.yaml
+++ b/tests/bench/speedcenter.exec.velcom.yaml
@@ -105,7 +105,7 @@
   build_config:
     cmd: ./compile.sh deriv.lean
 - attributes:
-    description: lake build dummy
+    description: lake build clean
     tags: [slow]
   run_config:
     <<: *time
@@ -113,37 +113,20 @@
       bash -c "
       set -ex
       ulimit -s unlimited
-      lake -dinundation clean
-      lake -dinundation build
+      cd inundation
+      lake -flakefile-clean.lean clean
+      lake -flakefile-clean.lean build
       "
   build_config:
     cmd: |
       bash -c "
       set -ex
       ulimit -s unlimited
-      lake -dinundation run mk
-      lake -dinundation build
+      cd inundation
+      cp lakefile.lean lakefile-clean.lean
+      lake -flakefile-clean.lean -Ktest=Clean run mkBuild
+      lake -flakefile-clean.lean build
       "
-#- attributes:
-#    description: lake build lean
-#    tags: [slow]
-#  run_config:
-#    <<: *time
-#    cmd: |
-#      bash -c "
-#      set -ex
-#      ulimit -s unlimited
-#      lake -Ktest=Clean clean
-#      lake -Ktest=Clean build
-#      "
-#    max_runs: 2
-#  build_config:
-#    cmd: |
-#      bash -c "
-#      set -ex
-#      ulimit -s unlimited
-#      lake -Ktest=Clean build
-#      "
 - attributes:
     description: lake build no-op
     tags: [fast]
@@ -153,18 +136,20 @@
       bash -c "
       set -ex
       ulimit -s unlimited
-      lake -f lakefile-nop.lean -Ktest=Nop build
+      lake -dinundation -flakefile-nop.lean build
       "
   build_config:
     cmd: |
       bash -c "
       set -ex
       ulimit -s unlimited
+      cd inundation
       cp lakefile.lean lakefile-nop.lean
-      lake -f lakefile-nop.lean -Ktest=Nop build
+      lake -flakefile-nop.lean -Ktest=Nop run mkBuild
+      lake -flakefile-nop.lean build
       "
 - attributes:
-    description: lake configure
+    description: lake config elab
     tags: [fast]
   run_config:
     <<: *time
@@ -172,28 +157,56 @@
       bash -c "
       set -ex
       ulimit -s unlimited
-      lake -dinundation script run nop
-      "
-  build_config:
-    cmd: |
-      bash -c "
-      set -ex
-      ulimit -s unlimited
-      lake -dinundation script run nop
-      "
-- attributes:
-    description: lake reconfigure
-    tags: [fast]
-  run_config:
-    <<: *time
-    cmd: |
-      bash -c "
-      set -ex
-      ulimit -s unlimited
-      lake -dinundation -flakefile-rc.lean -R script run nop
+      lake -dinundation -flakefile-rc.lean -R run nop
       "
   build_config:
     cmd: cp inundation/lakefile.lean inundation/lakefile-rc.lean
+- attributes:
+    description: lake config import
+    tags: [fast]
+  run_config:
+    <<: *time
+    cmd: |
+      bash -c "
+      set -ex
+      ulimit -s unlimited
+      lake -dinundation run nop
+      "
+  build_config:
+    cmd: |
+      bash -c "
+      set -ex
+      ulimit -s unlimited
+      lake -dinundation run nop
+      "
+- attributes:
+    description: lake config tree
+    tags: [fast]
+  run_config:
+    <<: *time
+    cmd: |
+      bash -c "
+      set -ex
+      ulimit -s unlimited
+      lake -dinundation/test/tree run nop
+      "
+  build_config:
+    cmd: |
+      lake -dinundation run mkTree
+      lake -dinundation/test/tree update
+- attributes:
+    description: lake env
+    tags: [fast]
+  run_config:
+    <<: *time
+    cmd: |
+      bash -c "
+      set -ex
+      ulimit -s unlimited
+      lake -dinundation env true
+      "
+  build_config:
+    cmd: lake -dinundation env true
 - attributes:
     description: lake startup
     tags: [fast]
